[package]
name = "kv_db"
version = "0.1.0"
edition = "2018"
authors = ["John Hamernick-Ramseier<j.hamernickramseier@gmail.com>"]
description = "A Command Line Key Value Store Database"
license = "MIT"
keywords = ["cli", "key-value", "database"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.14"
env_logger="0.9.0"
dirs-next="2.0.0"

[dependencies.clap]
version = "3.0.0-beta.4"#"2.33.3"
features = [ "wrap_help"]

[dependencies.multi_key_db]
path = "../multi_key_db"
version = "0.1.0"

[dev-dependencies]
assert_cmd = "1.0.7"
predicates = "2.0.1"
tempfile = "3.2.0"
